--- a/react/src/newPronto.css
+++ b/react/src/newPronto.css
@@ -1,19 +1,70 @@
-.newPronto-form {
+.root {
     position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.newPronto-form-div {
+    position: absolute;
+    width: 40vw;
+    height: 70vh;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+
+    border: 1px solid black;
+    padding: 2vmax;
+    border-top: 2vh solid rgba(9,9,121,0.9401961468181023);
+
+    box-shadow: -7px 7px 5px rgba(0, 0, 0, 0.164);
+    background-color: white;
+}
+
+.newPronto-form {
     display: flex;
     flex-direction: column;
+    position: absolute;
+    width: 90%;
 }
 
 .newPronto-text-label {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
+    flex-direction: column;
+    width: 100%;
+    margin: 1vh auto;
 }
 
 .newPronto-text-label-input{
-    height: 1vh;
+    height: 3vh;
+    border: 1px solid black;
+    border-radius: 8px;
+    padding: 2px 10px;
+
+    box-sizing: border-box;
+
+    width: 90%;
+
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.newPronto-descriere {
+    height: 10vh;
+}
+
+.newPronto-button {
+    position: relative;
+    width: 20%;
+    background-color: white;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 2vh;
+}
+
+.button {
+    position: absolute;
+    bottom: 15vh;
+    left: 72vw;
+    transition: 0.5s;
 }
