--- a/react/src/newPronto.css
+++ b/react/src/newPronto.css
@@ -1,3 +1,8 @@
+:root {
+    --left-blue: 66, 167, 255;
+    --right-blue: 0, 47, 255;
+}
+
 .root {
     position: absolute;
     width: 100%;
@@ -6,18 +11,34 @@
 
 .newPronto-form-div {
     position: absolute;
-    width: 40vw;
-    height: 70vh;
+    width: 35vw;
+    height: 85vh;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-
-    border: 1px solid black;
-    padding: 2vmax;
-    border-top: 2vh solid rgba(9,9,121,0.9401961468181023);
+    transform: translateX(-50%);
+    top: 10vh;
 
     box-shadow: -7px 7px 5px rgba(0, 0, 0, 0.164);
     background-color: white;
+    border-radius: 20px;
+}
+
+.new-pronto-header-div {
+    position: absolute;
+    width: 100%;
+    height: 10%;
+    background: linear-gradient(90deg,
+                                rgba(var(--left-blue), 0.5) 0%,
+                                rgb(var(--right-blue)) 100%);
+    border-radius: 20px 20px 0px 0px;
+}
+
+.upload-new-pronto-text {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 5%;
+    color: white;
+    font-size: 3rem;
 }
 
 .newPronto-form {
@@ -25,6 +46,8 @@
     flex-direction: column;
     position: absolute;
     width: 90%;
+    padding: 0px 2vmax;
+    top: 15%;
 }
 
 .newPronto-text-label {
@@ -53,18 +76,9 @@
     height: 10vh;
 }
 
-.newPronto-button {
-    position: relative;
-    width: 20%;
-    background-color: white;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 2vh;
-}
-
 .button {
     position: absolute;
-    bottom: 15vh;
-    left: 72vw;
+    bottom: 5vh;
+    left: 70vw;
     transition: 0.5s;
 }
