--- a/react/src/MainDiv.css
+++ b/react/src/MainDiv.css
@@ -12,6 +12,14 @@
     border-radius: 20px;
 }
 
+.main-content-div {
+    position: absolute;
+    top: 10%;
+    width: 100%;
+    height: 90%;
+    overflow-y: scroll;
+}
+
 .main-header-div {
     position: absolute;
     width: 100%;
