--- a/react/src/newPronto.css
+++ b/react/src/newPronto.css
@@ -3,19 +3,13 @@
     --right-blue: 0, 47, 255;
 }
 
-.root {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
 .newPronto-form {
     display: flex;
     flex-direction: column;
     position: absolute;
-    width: 90%;
+    width: 100%;
+    height: 100%;
     padding: 0px 2vmax;
-    top: 15%;
 }
 
 .newPronto-text-label {
@@ -25,23 +19,24 @@
     margin: 1vh auto;
 }
 
+.newPronto-text-label p {
+    font-size: 1.5rem;
+}
+
 .newPronto-text-label-input{
-    height: 3vh;
-    border: 1px solid black;
-    border-radius: 8px;
+    height: 2rem;
+    width: 100%;
+    border: none;
+    border-radius: 2px;
     padding: 2px 10px;
-
     box-sizing: border-box;
-
-    width: 90%;
-
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
+    box-shadow: -1px 1px 6px rgba(0, 0, 0, 0.1);
 }
 
 .newPronto-descriere {
-    height: 10vh;
+    margin-bottom: 10vh;
+    box-sizing: border-box;
+    min-height: 15vh;
 }
 
 .button {
@@ -49,4 +44,9 @@
     bottom: 5vh;
     left: 70vw;
     transition: 0.5s;
+}
+
+input:focus {
+    outline: none;
+    caret-color: #44a8ff;
 }
