--- a/react/src/MainDiv.css
+++ b/react/src/MainDiv.css
@@ -10,6 +10,7 @@
                 7px 7px 5px rgba(0, 0, 0, 0.164);
     background-color: white;
     border-radius: 20px;
+    transition: all 1s ease;
 }
 
 .main-content-div {
