--- a/react/src/MainDiv.css
+++ b/react/src/MainDiv.css
@@ -1,9 +1,7 @@
 .main-div {
     position: absolute;
-    width: 35vw;
+    width: 100%;
     height: 85vh;
-    left: 50%;
-    transform: translateX(-50%);
     top: 10vh;
 
     box-shadow: -7px 7px 5px rgba(0, 0, 0, 0.164),
