--- a/react/src/MainDiv.css
+++ b/react/src/MainDiv.css
@@ -10,6 +10,7 @@
     border-radius: 20px;
     transition: all 1s ease;
     animation: main-div-animation 1s;
+    overflow: hidden;
 }
 
 @keyframes main-div-animation {
@@ -30,6 +31,7 @@
     width: 100%;
     height: 90%;
     overflow-y: scroll;
+    padding-bottom: 20px;
 }
 
 .main-header-div {
