--- a/react/src/UploadPage.css
+++ b/react/src/UploadPage.css
@@ -115,6 +115,9 @@
     font-size: 1.5rem;
     width: 70%;
     margin: 0px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .uploaded-file-close {
