--- a/react/src/Dashboard.css
+++ b/react/src/Dashboard.css
@@ -1,3 +1,7 @@
+:root {
+    --dashboard-header-height: 12%;
+}
+
 .dashboard-body {
     position: absolute;
     top: var(--header-height);
@@ -22,7 +26,7 @@
 .dashboard-header {
     position: absolute;
     width: 100%;
-    height: 12%;
+    height: var(--dashboard-header-height);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,9 +38,8 @@
 
 .dashboard-items {
     position: absolute;
-    top: 18%;
+    bottom: 6%;
     width: 100%;
-    height: 82%;
     overflow-y: scroll;
     overflow-x: overlay;
 }
@@ -136,4 +139,41 @@
     border: none;
     background: none;
     color: white;
+}
+
+.dashboard-read-from-db-div {
+    position: absolute;
+    bottom: 0px;
+    height: 6%;
+    width: 100%;
+    border-top: 1px solid white;
+}
+
+.dashboard-read-from-db-input-div {
+    position: absolute;
+    height: 80%;
+    width: 90%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 20px;
+}
+
+.dashboard-read-from-db-input {
+    position: absolute;
+    background: none;
+    border: none;
+    height: 90%;
+    top: 5%;
+    left: 5%;
+    width: 70%;
+}
+
+.dashboard-read-from-db-icon {
+    position: absolute;
+    right: 5%;
+    top: 10%;
+    height: 80%;
+    cursor: pointer;
 }
