--- a/frontend/src/Dashboard.css
+++ b/frontend/src/Dashboard.css
@@ -42,6 +42,12 @@
     width: 100%;
     overflow-y: scroll;
     overflow-x: overlay;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.dashboard-items::-webkit-scrollbar {
+    display: none;
 }
 
 .dashboard-item, .dashboard-subitem {
