--- a/frontend/src/MainDiv.css
+++ b/frontend/src/MainDiv.css
@@ -31,6 +31,12 @@
     width: 100%;
     height: 90%;
     overflow-y: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.main-content-div::-webkit-scrollbar {
+    display: none;
 }
 
 .main-header-div {
